# rrai

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
scripts/: build-linux.sh  build-mac.sh  build-release.sh  dev-mac.sh  install.sh
src/: config.rs  lib.rs  main.rs
src/bot/: client.rs  mod.rs
src/bot/commands/: agents.rs  auto_approve.rs  clear_sessions.rs  config_cmd.rs  context.rs  force.rs  last.rs  mcp.rs  mod.rs  model.rs  models.rs  queue.rs  sessions.rs  skills.rs  start_new.rs  status.rs  stop.rs  usage.rs
src/bot/handlers/: interaction.rs  message.rs  mod.rs
src/claude/: mod.rs  output_formatter.rs  sdk.rs  session_manager.rs
src/db/: mod.rs  types.rs
src/discord/: mock_client.rs  mod.rs  real_client.rs
src/security/: mod.rs
src/utils/: channel_name.rs  cleanup.rs  mod.rs
tests/: db_integration.rs  security_test.rs  session_manager_test.rs
