[package]
name = "rrai"
version = "0.1.0"
edition = "2024"
description = "Rust Remote AI — Discord-based Claude Code agent controller"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "cache",
] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
regex = "1"
once_cell = "1"
parking_lot = "0.12"
tokio-stream = "0.1"
futures = "0.3"
libc = "0.2"
async-trait = "0.1.89"
